# kwin-deco-chromi

./: AUTHORS  CHANGELOG  CMakeLists.txt  INSTALL  README  THANKS  groups  index.html  project.config
img/: CMakeLists.txt  close.svgz  decoration.svgz  maximize.svgz
src/: CMakeLists.txt  aurorae.knsrc  button.cpp  button.h  button.hpp  chromi.cpp  chromi.desktop  chromi.h  chromiclient.cpp  chromiclient.h  client.cpp  client.hpp  factory.cpp  factory.hpp  titlebar.cpp  titlebar.h
src/config/: config.cpp
themes/: CMakeLists.txt
themes/chrome/: chromerc  metadata.desktop  minimize.svgz  restore.svgz
